[gd_scene load_steps=13 format=1]

[ext_resource path="res://main.gd" type="Script" id=1]
[ext_resource path="res://candy_destroy.ogg" type="AudioStream" id=2]
[ext_resource path="res://putar.gd" type="Script" id=3]
[ext_resource path="res://icon.png" type="Texture" id=4]
[ext_resource path="res://panahkristal.png" type="Texture" id=5]
[ext_resource path="res://pause.gd" type="Script" id=6]
[ext_resource path="res://score.tscn" type="PackedScene" id=7]
[ext_resource path="res://menu.gd" type="Script" id=8]

[sub_resource type="ConvexPolygonShape2D" id=1]

custom_solver_bias = 0.0
points = Vector2Array( -213.051, -655.62, 216.949, -655.62, 215.949, -5.62, -214.051, -5.62 )

[sub_resource type="Animation" id=2]

resource/name = "ani"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Spritez:transform/rot")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.3, 1 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -27.7458, 0.0 ]
}

[sub_resource type="Animation" id=3]

resource/name = "idle"
length = 1.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Spritez:transform/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.5, 1 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -0.902466, -13.5375 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=4]

resource/name = "lose"
length = 0.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("..:transform/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -350, 320 ), Vector2( 70, 320 ) ]
}

[node name="main" type="Node2D"]

[node name="stage" type="Node2D" parent="."]

script/script = ExtResource( 1 )

[node name="StreamPlayer 2" type="StreamPlayer" parent="stage"]

stream/stream = ExtResource( 2 )
stream/play = false
stream/loop = false
stream/volume_db = 0.0
stream/autoplay = false
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[node name="pos" type="Position2D" parent="stage"]

transform/pos = Vector2( 35.898, 32.6764 )

[node name="musuh" type="Area2D" parent="stage"]

transform/pos = Vector2( 244.051, 655.62 )
input/pickable = true
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision/layers = 512
collision/mask = 512
script/script = ExtResource( 3 )

[node name="Spritez" type="Sprite" parent="stage/musuh"]

transform/pos = Vector2( 0, 44 )
transform/rot = 180.0
texture = ExtResource( 4 )

[node name="shootfrom" type="Position2D" parent="stage/musuh/Spritez"]

transform/pos = Vector2( 0, 22 )

[node name="Sprite" type="Sprite" parent="stage/musuh/Spritez"]

transform/pos = Vector2( -2.32751, 75.1317 )
transform/rot = 180.0
texture = ExtResource( 5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="stage/musuh"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/ani = SubResource( 2 )
anims/idle = SubResource( 3 )
playback/active = false
playback/speed = 1.0
blend_times = [  ]
autoplay = "idle"

[node name="Label" type="Label" parent="stage/musuh"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 12.0
margin/top = 33.0
margin/right = 52.0
margin/bottom = 47.0
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="stage/musuh"]

build_mode = 0
polygon = Vector2Array( -214.051, -5.62, 215.949, -5.62, 216.949, -655.62, -213.051, -655.62 )
shape_range = Vector2( 0, 0 )
trigger = false

[node name="pause" type="Button" parent="stage"]

process/pause_mode = 2
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 513.0
margin/top = 763.0
margin/right = 586.0
margin/bottom = 783.0
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
text = "pause"
flat = false
script/script = ExtResource( 6 )

[node name="Area2D" type="Area2D" parent="stage/pause"]

transform/pos = Vector2( -269.949, -107.38 )
input/pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="Timer" type="Timer" parent="stage"]

process_mode = 1
wait_time = 5.0
one_shot = false
autostart = false

[node name="Timer 2" type="Timer" parent="stage"]

process_mode = 1
wait_time = 0.1
one_shot = false
autostart = false

[node name="Timer 3" type="Timer" parent="stage"]

process_mode = 1
wait_time = 0.1
one_shot = false
autostart = false

[node name="score" parent="stage" instance=ExtResource( 7 )]

transform/pos = Vector2( 579.473, 22.5139 )

[node name="Timer 4" type="Timer" parent="stage"]

process_mode = 0
wait_time = 0.02
one_shot = false
autostart = false

[node name="menu" type="Node2D" parent="stage"]

process/pause_mode = 2
editor/display_folded = true
transform/pos = Vector2( -350, 320 )
z/z = 10
script/script = ExtResource( 8 )

[node name="Polygon2D" type="Polygon2D" parent="stage/menu"]

polygon = Vector2Array( 1.70663, 2.24658, 321.707, 2.24658, 321.707, 142.247, 1.70663, 142.247 )
uv = Vector2Array(  )
color = Color( 0.226563, 0.0132751, 0.163243, 1 )
vertex_colors = ColorArray(  )
offset = Vector2( 0, 0 )
texture/texture = null
texture/offset = Vector2( 0, 0 )
texture/scale = Vector2( 1, 1 )
texture/rotation = 0.0
invert/enable = false
invert/border = 100.0

[node name="continue" type="Button" parent="stage/menu"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 60.0
margin/top = 110.0
margin/right = 137.0
margin/bottom = 130.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Play Again"
flat = false

[node name="Label" type="Label" parent="stage/menu"]

rect/scale = Vector2( 2, 2 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 110.0
margin/top = 50.0
margin/right = 173.0
margin/bottom = 64.0
text = "You Lose"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="AnimationPlayer" type="AnimationPlayer" parent="stage/menu"]

process/pause_mode = 2
playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("")
anims/lose = SubResource( 4 )
playback/active = true
playback/speed = 2.0
blend_times = [  ]
autoplay = ""

[node name="exit" type="Button" parent="stage/menu"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 190.0
margin/top = 110.0
margin/right = 270.0
margin/bottom = 130.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "exit"
flat = false

[node name="Polygon2D" type="Polygon2D" parent="stage"]

z/z = -20
polygon = Vector2Array( 30, 0, 460, 0, 460, 670, 30, 670 )
uv = Vector2Array( 16.979, 1.02213, 464.431, 0.607307, 463.038, 675.586, 16.9351, 675.522 )
color = Color( 0.131315, 0.207031, 0.120499, 1 )
vertex_colors = ColorArray(  )
offset = Vector2( 0, 0 )
texture/texture = null
texture/offset = Vector2( 0, 0 )
texture/scale = Vector2( 1, 1 )
texture/rotation = 0.0
invert/enable = false
invert/border = 100.0
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[connection signal="input_event" from="stage/musuh" to="stage/musuh" method="_on_musuh_input_event"]

[connection signal="toggled" from="stage/pause" to="stage/pause" method="_on_pause_toggled"]

[connection signal="timeout" from="stage/Timer" to="stage" method="_on_Timer_timeout"]

[connection signal="timeout" from="stage/Timer 2" to="stage" method="_on_Timer_2_timeout"]

[connection signal="timeout" from="stage/Timer 3" to="stage" method="_on_Timer_3_timeout"]

[connection signal="timeout" from="stage/Timer 4" to="stage" method="_on_Timer_4_timeout"]

[connection signal="pressed" from="stage/menu/continue" to="stage/menu" method="_on_continue_pressed"]

[connection signal="finished" from="stage/menu/AnimationPlayer" to="stage/menu" method="_on_AnimationPlayer_finished"]

[connection signal="pressed" from="stage/menu/exit" to="stage/menu" method="_on_exit_pressed"]


